<resources>
    <string name="app_name">Otivr</string>
    <string name="updating">Updating…</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="close_drawer">Close hamburger menu</string>
    <string name="open_drawer">Open hamubrger menu</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="company_name">Company name</string>
    <string name="cin">Company registration number</string>
    <string name="register">Join now</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="published">Published</string>
    <string name="complexity">Complexity</string>
    <string name="budget">Budget</string>
    <string name="period">Period</string>
    <string name="ad_type">Ad type</string>
    <string name="expiry_date">Expiry date</string>
    <string name="no_of_bids">No of bids</string>
    <string name="average_bid">Average bid</string>
    <string name="submited_by">Submited by</string>
    <string name="lowest_bid">Lowest bid</string>
    <string name="highest_bid">Highest bid</string>
    <string name="our_bid">Our bid</string>
    <string name="free_search">Free search</string>
    <string name="search_by_ad">Search by ad</string>
    <string name="hire_resource">Hire resource</string>
    <string name="menu_create_ad">Create Ad</string>
    <string name="menu_market">Market</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_tender_management">Tender Management</string>
    <string name="menu_support">Support</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_invite_colleague">Invite Colleague</string>
    <string name="menu_network">Network</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="login_title">Log in and get to work</string>
    <string name="username">Username</string>
    <string name="login_confirm">Log in</string>
    <string name="lost_login">Lost login?</string>
    <string name="stay_logged_in">Stay logged in</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="sign_up_title">Join Otivr and explore your business opportunities today</string>
    <string name="sign_up_first_name">First name</string>
    <string name="sign_up_last_name">Last name</string>
    <string name="sign_up_your_company_email">Your company e-mail</string>
    <string name="sign_up_cin">CIN</string>
    <string name="sign_up_region">Region</string>
    <string name="sign_up_dont_have_cin">Don\'t have a CIN?</string>
    <string name="sign_up_join_now">Join Now</string>
    <string name="sign_up_already_have_account">Already have an account?</string>
    <string name="forgot_password_header">Forgot Password?</string>
    <string name="forgot_password_text">We will send you an email with the link that help you to reset password. Please check your email after submit.</string>
    <string name="forgot_password_email_hint">Please enter e-mail here for reset password</string>
    <string name="forgot_password_send_button">Send</string>
    <string name="complexity_low">Low</string>
    <string name="complexity_medium">Medium</string>
    <string name="complexity_high">High</string>
    <string name="seniority_level_junior">Junior</string>
    <string name="seniority_level_mid">Mid-Senior</string>
    <string name="seniority_level_senior">Senior</string>
    <string name="type_project">Project</string>
    <string name="type_assignment">Assignment</string>
    <string name="type_resource">Resource</string>
    <string name="status_open">Open</string>
    <string name="status_offered">Offered</string>
    <string name="status_accepted">Accepted</string>
    <string name="status_rejected">Rejected</string>
    <string name="status_closed">Closed</string>
    <string name="status_unanswered">Unanswered</string>
    <string name="invite">Invite</string>
    <string name="type_invitation">Type of invitation</string>
    <string name="admin_invitation_code">Admin invitation code</string>
    <string name="employee_invitation_code">Employee invitation code</string>
    <string name="invite_send">Invite was sending</string>
    <string name="invite_error">Invite don\'t sending. Something went wrong</string>
    <string name="invalid_email">Email is not valid</string>
    <string name="tender_management_tab_ads">Our Ads</string>
    <string name="tender_management_tab_proposals">Sent Proposals</string>
    <string name="inbox_messages">Messages</string>
    <string name="inbox_requests">Requests</string>
    <string name="create_ad">Create Ad</string>
    <string name="create_ad_tab_project">Project</string>
    <string name="create_ad_tab_assignment">Assignment</string>
    <string name="create_ad_tab_resources">Resources</string>
    <string name="create_ad_title">Title</string>
    <string name="create_ad_location">Location</string>
    <string name="create_ad_category">Category</string>
    <string name="create_ad_complexity">Complexity</string>
    <string name="create_ad_seniority_level">Seniority Level</string>
    <string name="create_ad_start_date">Start Date</string>
    <string name="create_ad_possible_start_date">Possible Start Date</string>
    <string name="create_ad_end_date">End Date</string>
    <string name="create_ad_extent_on_site">Extent: On Site</string>
    <string name="create_ad_hours_per_week">Hours Per Week</string>
    <string name="create_ad_maximum_budget">Maximum Budget</string>
    <string name="create_ad_maximum_price">Maximum Price</string>
    <string name="create_ad_price">Price</string>
    <string name="create_ad_skills">Skills</string>
    <string name="create_ad_project_description_hint">Describe your project here</string>
    <string name="create_ad_project_assignment_description_hint">Describe your assignment here</string>
    <string name="create_ad_project_resources_description_hint">Describe your resource here</string>
    <string name="create_ad_resource">Resource</string>
    <string name="create_ad_resource_type">Resource Type</string>
    <string name="create_ad_offered_resource">Offered Resource</string>
    <string name="create_ad_offered_resource_type">Offered Resource Type</string>
    <string name="button_search">Search</string>
    <string name="button_clear">Clear</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="button_start_date">Start Date</string>
    <string name="button_end_date">End Date</string>
    <string name="button_categories_empty">Search within a specific category</string>
    <string name="button_categories_selected">Categories (%s)</string>
    <string name="button_skills_empty">Search with a specific skill set</string>
    <string name="button_skills_selected">Skills (%s)</string>
    <string name="button_regions_empty">Region</string>
    <string name="button_regions_selected">Regions (%s)</string>
    <string name="filtered_by">Filtered By: %s</string>
    <string name="categories_selected">Categories(%s)</string>
    <string name="skills_selected">Skills(%s)</string>
    <string name="regions_selected">Regions(%s)</string>
    <string name="start_date_selected">Start Date(%s)</string>
    <string name="end_date_selected">End Date(%s)</string>
    <string name="dates_selected">Dates(%1$s : %1$s)</string>
    <string name="create_bid">Create bid</string>
    <string name="create_bid_name">Name</string>
    <string name="create_bid_email">Email</string>
    <string name="create_bid_phone">Phone number</string>
    <string name="create_bid_estimated_time">Estimated time to completion (hours)</string>
    <string name="create_bid_start_date">Start date</string>
    <string name="create_bid_end_date">End date</string>
    <string name="create_bid_possible_start_date">Possible start date</string>
    <string name="create_bid_extern">Extern: On site (%)</string>
    <string name="create_bid_hours_per_week">Hours per week (hours)</string>
    <string name="create_bid_estimated_total_price">Estimated total price</string>
    <string name="create_bid_estimated_price">Estimated price (hourly rate, INR)</string>
    <string name="create_bid_maximum_price">Maximum price (hourly rate, INR)</string>
    <string name="create_bid_processed_skills">Possessed Skills</string>
    <string name="create_bid_required_skills">Required Skills</string>
    <string name="create_bid_seniority_level">Seniority Level</string>
    <string name="create_bid_location">Select Location</string>
    <string name="create_bid_offered_resource_types">Offered Resource Types</string>
    <string name="create_bid_offered_resources">Offered Resources</string>
    <string name="create_bid_upload_cv">Upload CV</string>
    <string name="create_bid_description_proposal">Description of proposal</string>
    <string name="create_bid_with_guarantee">Does you bit come with a Guarantee?</string>
    <string name="create_bid_description_guarantee">Description of the guarantee</string>
    <string name="create_bid_max_skills">You can choose max %s skills</string>
    <string name="create_bid_max_offered_resources">You can offer max %s resources</string>
    <string name="create_bid_max_offered_resource">You can offer max %s resource</string>
    <string name="create_bid_max_offered_resource_types">You can offer max %s resource types</string>
    <string name="create_bid_view_cv">View CV</string>
    <string name="create_bid_linkedin">Linked In</string>
    <string name="create_bid_place_bid">Place a bid</string>
    <string name="create_bid_created">Bid has been created</string>
    <string name="change_bid_details">Bid details</string>
    <string name="change_bid_changed">Bid has been changed</string>
    <string name="validate_data">Please fill data</string>
    <string name="validate_invalid">Invalid data</string>
    <string name="user_information">User information</string>
    <string name="email_notifications">E-mail notifications</string>
    <string name="user_profile_first_name">First Name</string>
    <string name="user_profile_middle_initial">Middle Initial</string>
    <string name="user_profile_last_name">Last Name</string>
    <string name="user_profile_email">E-mail</string>
    <string name="user_profile_phone_number">Phone Number</string>
    <string name="user_profile_employee_number">Employee Number</string>
    <string name="user_profile_job_title">Job Title</string>
    <string name="user_profile_department">Department</string>
    <string name="user_profile_office_location">Office Location</string>
    <string name="user_profile_linkedin_profile">LinkedIn Profile</string>
    <string name="send_me_notifications">Send me email notifications when:</string>
    <string name="option_proposals">I receive new proposals on my ads</string>
    <string name="option_responses">I receive responses on my proposals</string>
    <string name="option_messages">I receive new messages in my inbox</string>
    <string name="option_comments">I receive comments on my news publications</string>
    <string name="option_partner_publications">Partners publish new ads, events or news</string>
    <string name="option_requests">I receive new requests from colleagues</string>
    <string name="option_projects_etc">New projects, assignments or resources have been posted</string>
    <string name="user_profile_password">Old password</string>
    <string name="user_profile_new_password">New password</string>
    <string name="user_profile_confirm_new_password">Confirm new password</string>
    <string name="user_profile_change_password">Change password</string>
</resources>