<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smaller_margin"
        android:text="@string/user_profile_change_password"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/smaller_margin"
        android:background="@color/divider" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_password" />

            <android.support.v4.widget.Space
                android:layout_width="@dimen/horizontal_margin"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_new_password" />

            <android.support.v4.widget.Space
                android:layout_width="@dimen/horizontal_margin"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/new_password"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_confirm_new_password" />

            <android.support.v4.widget.Space
                android:layout_width="@dimen/horizontal_margin"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/confirm_new_password"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/change_password"
                style="@style/BigRoundedButton.Blue"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/user_profile_change_password"
                android:layout_column="3"
                />
        </TableRow>
    </TableLayout>

</merge>